--- a/hg.css
+++ b/hg.css
@@ -1,3 +1,6 @@
+
+/* HG.CSS - v1.0.1 */
+
 /* BASE */
 body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
@@ -42,6 +45,11 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;ov
 .fright { float: right; }
 .clear { clear: both; }
 
+.centered { max-width: 1080px; margin-left: auto; margin-right: auto; }
+.centered-700 { max-width: 700px; margin-left: auto; margin-right: auto; }
+.centered-800 { max-width: 800px; margin-left: auto; margin-right: auto; }
+.centered-980 { max-width: 980px; margin-left: auto; margin-right: auto; }
+
 .middle { margin-left: auto; margin-right: auto; }
 .no-wrap { white-space: nowrap; }
 .hidden, .hide { display: none; }
@@ -50,10 +58,6 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;ov
 .ta-center { text-align: center; }
 .ta-right { text-align: right; }
 
-.centered { max-width: 1080px; margin-left: auto; margin-right: auto; }
-.centered-700 { max-width: 700px; margin-left: auto; margin-right: auto; }
-.centered-800 { max-width: 800px; margin-left: auto; margin-right: auto; }
-.centered-980 { max-width: 980px; margin-left: auto; margin-right: auto; }
 
 
 /* DECORATIVE */
@@ -77,23 +81,23 @@ hr.block { width: 100px; height: 10px; background: #efefef; border: none; margin
 
 
 /* FONT */
-.bold 			{ font-weight: 700; }
-.break-word 	{ word-wrap: break-word; }
+.bold 		{ font-weight: 700; }
+.break-word { word-wrap: break-word; }
 
-.fs-1 			{ font-size: 1em; }				.fs-2 			{ font-size: 2em; line-height: 1em; }
-.fs-1-1 		{ font-size: 1.1em; }			.fs-3 			{ font-size: 3em; line-height: 1em; }
-.fs-1-2 		{ font-size: 1.2em; }			.fs-4 			{ font-size: 4em; line-height: 1em; }
-.fs-1-3 		{ font-size: 1.3em; }			.fs-0-9 		{ font-size: 0.9em; }
-.fs-1-4 		{ font-size: 1.4em; }			.fs-0-8 		{ font-size: 0.8em; }
-.fs-1-5 		{ font-size: 1.5em; }			.fs-0-7 		{ font-size: 0.7em; }
-.fs-1-6 		{ font-size: 1.6em; }			.fs-0-6 		{ font-size: 0.6em; }
-.lh-1			{ line-height: 1em; }			.fs-0-5 		{ font-size: 0.5em; }	
-.lh-1-1			{ line-height: 1.1em; }			.lh-1-2			{ line-height: 1.2em; }
-.lh-1-5			{ line-height: 1.5em; }
-.lh-2			{ line-height: 2em; }
+.fs-1 		{ font-size: 1em; }		.fs-2 	{ font-size: 2em; line-height: 1em; }
+.fs-1-1 	{ font-size: 1.1em; }	.fs-3 	{ font-size: 3em; line-height: 1em; }
+.fs-1-2 	{ font-size: 1.2em; }	.fs-4 	{ font-size: 4em; line-height: 1em; }
+.fs-1-3 	{ font-size: 1.3em; }	.fs-0-9 { font-size: 0.9em; }
+.fs-1-4 	{ font-size: 1.4em; }	.fs-0-8 { font-size: 0.8em; }
+.fs-1-5 	{ font-size: 1.5em; }	.fs-0-7 { font-size: 0.7em; }
+.fs-1-6 	{ font-size: 1.6em; }	.fs-0-6 { font-size: 0.6em; }
+.lh-1		{ line-height: 1em; }	.fs-0-5 { font-size: 0.5em; }	
+.lh-1-1		{ line-height: 1.1em; }	.lh-1-2	{ line-height: 1.2em; }
+.lh-1-5		{ line-height: 1.5em; }
+.lh-2		{ line-height: 2em; }
 
-.fs-2-2 			{ font-size: 2.2em; line-height: 1em; }
-.fs-2-5 			{ font-size: 2.5em; line-height: 1em; }
+.fs-2-2 		{ font-size: 2.2em; line-height: 1em; }
+.fs-2-5 		{ font-size: 2.5em; line-height: 1em; }
 
 .ta-left 		{ text-align: left; }
 .ta-center 		{ text-align: center; }
@@ -144,18 +148,14 @@ hr.block { width: 100px; height: 10px; background: #efefef; border: none; margin
 .col-90 	{ width: 90%; }
 
 /* NON BREAKING */
-.col-25-stay { width: 25%; }
-.col-50-stay { width: 50%; }
-.col-75-stay { width: 75%; }
-
 .col-wrap .col-25:nth-child(4n+1) { clear: both; }
 .col-wrap .col-20:nth-child(5n+1) { clear: both; }
 .col-wrap .col-33:nth-child(3n+1) { clear: both; }
 .col-wrap .col-50:nth-child(2n+1) { clear: both; }
 
 @media only screen and (max-width: 780px) { 
-	.col-50, .col-60, .col-40 { width: 100%; } 
-	.col-33, .col-25, .col-20 { width: 50%; }
+	.col-wrap .col-50, .col-wrap .col-60, .col-wrap .col-40 { width: 100%; } 
+	.col-wrap .col-33, .col-wrap .col-25, .col-wrap .col-20 { width: 50%; }
 	
 	.col-wrap .col:nth-child(2n+1) { clear: both; }
 	.col-wrap .col:nth-child(4n+1),
@@ -166,7 +166,7 @@ hr.block { width: 100px; height: 10px; background: #efefef; border: none; margin
 
 @media only screen and (max-width: 480px) { 
 	.col { padding: 5px; } 
-	.col-33, .col-25, .col-20 { width: 100%; }
+	.col-wrap .col-33, .col-wrap .col-25, .col-wrap .col-20 { width: 100%; }
 }
 
 
@@ -194,6 +194,7 @@ hr.block { width: 100px; height: 10px; background: #efefef; border: none; margin
 .pad-horz-no 	{ padding-left: 0; padding-right: 0; }
 .pad-no			{ padding: 0; }
 .pad-no-top		{ padding-top: 0; }
+.pad-no-bottom	{ padding-bottom: 0; }
 
 
 /* MARGIN */
@@ -211,11 +212,16 @@ hr.block { width: 100px; height: 10px; background: #efefef; border: none; margin
 .mar-horz-lrg 	{ margin-right: 20px; margin-left: 20px; }
 .mar-horz-xlrg	{ margin-right: 40px; margin-left: 40px; }
 .mar-horz-no	{ margin-right: 0; margin-left: 0; }
-
-.mar-no			{ margin: 0; }
-.mar-bottom-1	{ margin-bottom: 1px; }
-.mar-bottom-med { margin-bottom: 10px; }
-.mar-bottom-lrg { margin-bottom: 20px; }
-.mar-bottom-xlrg { margin-bottom: 40px; }
+.mar-bot-1		{ margin-bottom: 1px; }
+.mar-bot-sml 	{ margin-bottom: 5px; }
+.mar-bot-med 	{ margin-bottom: 10px; }
+.mar-bot-lrg 	{ margin-bottom: 20px; }
+.mar-bot-xlrg 	{ margin-bottom: 40px; }
+.mar-top-1      { margin-top: 1px; }
+.mar-top-sml    { margin-top: 5px; }
+.mar-top-med    { margin-top: 10px; }
 .mar-top-lrg    { margin-top: 20px; }
 .mar-top-xlrg   { margin-top: 40px; }
+.mar-no			{ margin: 0; }
+.mar-no-top		{ margin-top: 0; }
+.mar-no-bot		{ margin-bottom: 0; }
